fix: removed too much css from index.css (nbconvert)

--- a/solara/server/assets/style.css
+++ b/solara/server/assets/style.css
@@ -116,6 +116,59 @@ div.highlight {
 
 /* originally from index.css */
 
+.p-Widget, /* </DEPRECATED> */
+.lm-Widget {
+  position: relative;
+  overflow: hidden;
+  cursor: default;
+}
+
+body {
+  font-size:14px;
+  font-weight:400;
+  letter-spacing:0;
+  line-height:1.28581;
+  text-transform:none;
+  color:#182026;
+  font-family:-apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue", "Icons16", sans-serif;
+}
+
+:root {
+  --jp-warn-color0: var(--md-orange-700);
+}
+
+p {
+  margin-top: unset;
+  margin-bottom: unset;
+}
+
+small {
+  font-size: unset;
+}
+
+strong {
+  font-weight: unset;
+}
+
+/* Override Blueprint's _typography.scss styles */
+a {
+  text-decoration: unset;
+  color: unset;
+}
+
+a:hover {
+  text-decoration: unset;
+  color: unset;
+}
+
+/* Override Blueprint's _accessibility.scss styles */
+:focus {
+  outline: unset;
+  outline-offset: unset;
+  -moz-outline-radius: unset;
+}
+
+
 /** manually stripped down version of the nbconvert css
   * only contains css for the mime renderer and output area
   * and things I (MB) wasn't sure about.
